--- a/website/style2.css
+++ b/website/style2.css
@@ -18,20 +18,20 @@ html, body {
 }
 .intro .inner {
     display: table-cell;
-    vertical-align: middle;
+    vertical-align: top;
     width: 100%;
     max-width: none;
 }
 .content {
     max-width: 500px;
     margin: 0 auto;
-    text-align: center;
+    text-align: middle;
 }
 .content h1 {
     font-family: 'Raleway', sans-serif;
     color: #F9F3F4;
     text-shadow: 0px 0px 300px #000;
-    font-size: 400%;
+    font-size: 500%;
 }
 .btn {
     border-radius: 9px;
